Partial cleanup of the code in forums
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@2063 a8e77078-a1c7-4fa5-b8fc-53c5178a176c